# AQGC

./: apply_translations.py  build_dict.py  build_log.txt  build_now.bat  build_perf.bat  build_perf_log.txt  build_qgc.bat  do_build.bat  download_qt.sh  json_unfinished.txt  qt_updates.xml  run_qgc.bat  run_qgc_debug.bat  source_unfinished.txt  trans_dict.json  translate_qgc.py  word_dict.json
new_md/: 2026-06-10-ai-chat.md  ai-fc-parameters.md  ai-ui-redesign.md  ai-vehicle-and-settings.md
py/: test_script.py
qgroundcontrol/changelog/: 2026-05-25_performance_indicator.md
qgroundcontrol/src/API/: QGCCorePlugin.cc
qgroundcontrol/src/FlyView/: CMakeLists.txt  FlyViewAIChatPanel.qml  FlyViewCustomLayer.qml
qgroundcontrol/src/QmlControls/: CMakeLists.txt  QGroundControlQmlGlobal.cc  QGroundControlQmlGlobal.h  ScreenToolsController.cc
qgroundcontrol/src/Toolbar/: CMakeLists.txt  PerformanceIndicator.qml  PerformanceIndicatorPage.qml
qgroundcontrol/src/Utilities/Diagnostics/: AIChatService.cc  AIChatService.h  AIParameterTools.cc  AIParameterTools.h  AISettingsTools.cc  AISettingsTools.h  AIVehicleTools.cc  AIVehicleTools.h  CMakeLists.txt  ScriptRunner.cc  ScriptRunner.h  SystemResourceMonitor.cc  SystemResourceMonitor.h
qgroundcontrol/translations/: qgc_json_zh_CN.ts  qgc_source_zh_CN.ts
